# open_deep_research

./: .gitignore  README.md  README_PROFILING.md  config.env.dev  pyproject.toml  requirements.txt
benchmark/: README.md  scoring.py  summary.py
benchmark/baselines/: smolagents_baseline.py
benchmark/benchmark_configs/: base_llm_config_ds_v3.yaml  base_llm_config_llama4_m.yaml  base_llm_config_qwen2p5.yaml  langchain_deep_researcher_ds_v3.yaml  langchain_deep_researcher_llama4_m.yaml  langchain_deep_researcher_qwen2p5.yaml  open_deep_researcher_1step_ds_v3.yaml  open_deep_researcher_1step_llama4_m.yaml  open_deep_researcher_1step_qwen2p5.yaml  open_deep_researcher_3step_ds_v3.yaml  open_deep_researcher_3step_llama4_m.yaml  open_deep_researcher_3step_qwen2p5.yaml  smolagent_config_ds_v3.yaml  smolagent_config_llama4_m.yaml  smolagent_config_qwen2p5.yaml
benchmark/benchmark_configs/turbo/: open_deep_researcher_config_turbo.yaml
configs/: base_llm_config.yaml  open_deep_researcher_config.yaml  open_deep_researcher_config_turbo.yaml  turbo_deep_researcher_config.yaml
src/: analyze_profile.py  together_open_deep_research.py  webapp.py
src/libs/utils/: agent_factory.py  data_types.py  evals.py  llms.py  log.py  podcast.py  tavily_search.py
